--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,14 @@ buck-out/
 # Bundle artifact
 *.jsbundle
 
-# Misc
+# AWS amplify
 #
-.env
+accessKeys.csv
+awsmobilejs
+appsync-info.json
+aws-info.json
+project-info.json
+aws-exports.*
+awsmobilejs/.awsmobile/backend-build
+awsmobilejs/\#current-backend-info
+~awsmobilejs-*/
