--- a/package.json
+++ b/package.json
@@ -25,15 +25,21 @@
   },
   "dependencies": {
     "apisauce": "^0.14.2",
+    "aws-amplify": "^1.0.6",
+    "aws-amplify-react-native": "^1.0.6",
     "format-json": "^1.0.3",
     "identity-obj-proxy": "^3.0.0",
     "lodash": "^4.17.4",
+    "path": "^0.12.7",
     "prop-types": "^15.6.1",
     "querystringify": "1.0.0",
     "ramda": "^0.25.0",
     "react": "16.3.1",
     "react-native": "0.53.0",
     "react-native-config": "^0.10.0",
+    "react-native-elements": "^0.19.1",
+    "react-native-uuid": "^1.4.9",
+    "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^1.5.11",
     "react-navigation-redux-helpers": "^1.0.4",
     "react-redux": "^5.0.6",
@@ -41,6 +47,7 @@
     "redux-persist": "^5.4.0",
     "redux-saga": "^0.16.0",
     "reduxsauce": "0.7.0",
+    "rn-prompt": "^1.0.3",
     "seamless-immutable": "^7.1.3"
   },
   "devDependencies": {
