--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "redux-persist": "^5.4.0",
     "redux-saga": "^0.16.0",
     "reduxsauce": "0.7.0",
+    "rn-fetch-blob": "^0.10.12",
     "rn-prompt": "^1.0.3",
     "seamless-immutable": "^7.1.3"
   },
